# slim-tg-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  e2e-validation.md  release.md  security.md
scripts/: e2e_smoke.py  smoke.sh
skills/tg-bot/: SKILL.md  bot.py
skills/tg-contacts/: SKILL.md  contacts.py
skills/tg-export/: SKILL.md  export.py
skills/tg-folders/: SKILL.md  folders.py
skills/tg-group-admin/: SKILL.md  admin.py
skills/tg-location/: SKILL.md  location.py
skills/tg-media-upload/: SKILL.md  media.py
skills/tg-messaging/: SKILL.md  act.py  send.py
skills/tg-polls/: SKILL.md  poll.py
skills/tg-privacy/: SKILL.md  privacy.py
skills/tg-profile/: SKILL.md  profile.py
skills/tg-scheduling/: SKILL.md  schedule.py
skills/tg-stickers-gifs/: SKILL.md  sg.py
skills/tg-stories/: SKILL.md  story.py
skills/tg-topics/: SKILL.md  topic.py
src/tgmcp/: client.py
src/tgmcp/cli/: main.py
src/tgmcp/daemon/: audit.py  auth.py  metrics.py  paths.py  sanitizer.py  server.py  telegram.py
src/tgmcp/mcp_server/: server.py
tests/: test_admin_contacts_endpoints.py  test_auth_envelope.py  test_auth_keychain_fallback.py  test_channels.py  test_cleanup_race.py  test_cli_wiring.py  test_client_smoke.py  test_daemon_inspect.py  test_daemon_stop_safety.py  test_daemon_stop_waits.py  test_download_safe_path.py  test_downloads_dir_safety.py  test_e2e_telethon_api_fixes.py  test_export.py  test_home_resolution.py  test_instance_id_binding.py  test_media_upload.py  test_messaging_endpoints.py  test_multi_account.py  test_participants_count.py  test_passphrase_handoff.py  test_paths.py  test_phase3_batch4.py  test_phase4_bot_mode.py  test_phase4_location.py  test_phase4_metrics.py  test_phase4_premium.py  test_phase4_stories.py  test_phase4_topics.py  test_polls.py  test_privacy_folders.py  test_profile.py  test_runtime_dir_safety.py  test_sanitizer.py  test_scheduling.py  test_shutdown_rpc.py  test_singleton_lock.py  test_stickers_gifs.py  test_stop_lock_recheck.py  test_trust_derivation.py  (+1 more)
