[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slim-tg-mcp"
version = "0.5.1"
description = "Slim Telegram MCP server with skill-based lazy loading, encrypted sessions, and prompt-injection defense"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "haoyuwang", email = "haoyuwang88888@gmail.com" }]
keywords = ["telegram", "mcp", "claude", "telethon", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Tightened from >=1.36 in 0.5.1: poll/draft/scheduled/folder
    # wrappers depend on the TextWithEntities + InputReplyTo TL types
    # introduced in Telethon 1.43. On older Telethons several wrappers
    # raise TypeError on real RPC. Real-account e2e from v0.5.1 release
    # caught this; see CHANGELOG.
    "telethon>=1.43,<2.0",
    "mcp>=1.2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "click>=8.1",
    "keyring>=24.0",
    "cryptography>=42.0",
    "pydantic>=2.6",
    "rich>=13.7",
    "prometheus_client>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
tgmcp = "tgmcp.cli.main:cli"
tgmcp-daemon = "tgmcp.daemon.server:main"
tgmcp-mcp = "tgmcp.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tgmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
